--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 L15 is wrtten in JavaScript. L15 has LaTex syntax and AST semantics. That is,
 L15 defines a translation between LaTex and ASTs and provides basic support
-for pooling and evaluating th ASTs.
+for pooling and evaluating those ASTs.
 
 L15 is written by Jeff Dyer (jeffdyer@acm.org) of Art Compiler LLC.
 
